# dachOS

./: .gitignore  README.md  Untitled Diagram.drawio  text.txt
.github/workflows/: sync2gitee.yml
doc/wiki/: 2月28日.md  3月11日.md  3月2日.md  3月30日.md  3月3日.md  3月7日.md  3月8日.md  Home.md  _Sidebar.md  markdown-0秒入门点击就会.md  wiki编辑流程.md  中国计算机设计大赛.md  在linux命令行中科学上网.md  复现人工智能应用.md  如何编辑本wiki.md  将github自动同步到gitee.md  报名挑战杯和中国计算机设计大赛.md  掌握开发流程.md  操作系统概述.md  涉及m1-mac.md  熟悉常见linux操作.md  资料库.md  配置环境.md
src/: .gitignore  Dockerfile
src/quark/: Cargo.toml  Makefile
src/quark/src/: console.rs  entry.asm  lang_items.rs  main.rs  roar.rs  roar.txt  sbi.rs
src/quark/src/interrupt/: context.rs  handler.rs  interrupt.asm  mod.rs  timer.rs
src/quark/src/memory/: config.rs  heap.rs  mod.rs
src/quark/src/memory/frame/: allocator.rs  frame_tracker.rs
src/quark/src/memory/mapping/: mapping.rs  memory_set.rs  segment.rs
