[package]
name = "quark"
version = "0.1.0"
authors = ["chenzhiy2001 <30455060+chenzhiy2001@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = {version="1.4.0",features=["spin_no_std"]}
riscv = {git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }